@@ -10,6 +10,7 @@ Bug fixes:
 - PR#4994: ocaml-mode doesn't work with xemacs21
 - PR#5327: (Windows) Unix.select blocks if same socket listed in first and
   third arguments
+- PR#5468: ocamlbuild should preserve order of parametric tags
 - PR#5551: Avoid repeated lookups for missing cmi files
 - PR#5552: try to use camlp4.opt if it's possible
 - PR#5611: avoid clashes betwen .cmo files and output files during linking
